优化侧边栏

--- a/docs/think/读书总结.md
+++ b/docs/think/读书总结.md
@@ -1,9 +1,10 @@
 ---
-    title: 传记相关
+    title: 读书总结
     author: 李龙
     date: '2023-09-12'
 ---
-## GitHub
+
+## 宋氏家族全传
 
 ### 1、电脑翻墙之后，出现无法pull 和 push代码问题解决
 
@@ -18,3 +19,14 @@ git config --global --unset https.proxy
  
 ```
 
+## 毛泽东传
+
+## 邓小平传
+
+## 拿破仑传记
+
+## 胡雪岩红顶商人
+
+## 武则天传
+
+## 蒋介石
