优化侧边栏

--- a/docs/think/读书总结.md
+++ b/docs/think/读书总结.md
@@ -3,30 +3,20 @@
     author: 李龙
     date: '2023-09-12'
 ---
+## 传记相关
+### 宋氏家族全传
+### 毛泽东传
+### 邓小平传
+### 拿破仑传记
+### 胡雪岩红顶商人
+### 武则天传
+### 蒋介石
 
-## 宋氏家族全传
+## 历史相关
+### 民国史
+### 大清十二帝
+### 明朝那些事
+### 三国
+### 司马 晋朝
 
-### 1、电脑翻墙之后，出现无法pull 和 push代码问题解决
-
-```java
-问题：
- Failed to connect to github.com port 443:connection timed out
-解决：
-1、查询是否使用代理：git config --global http.proxy 
-2、取消全局代理：
-git config --global --unset http.proxy
-git config --global --unset https.proxy
- 
-```
-
-## 毛泽东传
-
-## 邓小平传
-
-## 拿破仑传记
-
-## 胡雪岩红顶商人
-
-## 武则天传
-
-## 蒋介石
+## 专业书籍
