优化侧边栏

--- a/docs/think/博士申请准备.md
+++ b/docs/think/博士申请准备.md
@@ -104,4 +104,4 @@ PS
 
 2）博士期间的研究计划--开头指明自己感兴趣的方向，这里说一下愿意进一步沟通决定，是因为博士基本不是自己想做啥就做啥，导师有自己的安排，只会接近或者相似，不太可能完全一样，所以表明自己愿意接受“派遣”；
 
-3）附件中一定要有个人简历的电子版（我习惯上传PDF导出的图片格式，节省老师下载，里面一定要有联系方式），同时可以附带已录用论文的PDF，也可以附带上自己硕士期间的成绩单；此外，锦上添花的是，可以带上一份详细的博士期间研究计划书。 作者：珞珈山下的小狐狸 https://www.bilibili.com/read/cv24043032/ 出处：bilibili
+3）附件中一定要有个人简历的电子版（我习惯上传PDF导出的图片格式，节省老师下载，里面一定要有联系方式），同时可以附带已录用论文的PDF，也可以附带上自己硕士期间的成绩单；此外，锦上添花的是，可以带上一份详细的博士期间研究计划书。
